--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
                 <a href="https://www.bestpianoclass.com/beautiful-beginner-chord-progression-bonus/" class="button" target="_blank">The Money patterns</a>
             </div>
         </section>
+        <section id="download">
+            <h3>Wave</h3>
+            <a href="/voice.mp3" class="button">Download voice</a>
+        </section>
     </body>
 </html>
