--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         </section>
         <section id="download">
             <h3>Wave</h3>
-            <a href="/voice.mp3" class="button">Download voice</a>
+            <a href="/song/voice.mp3" class="button">Download voice</a>
+        </section>
+        <section id="midi-download">
+            <h3>MIDI File</h3>
+            <a href="/song/tutorial.mid" class="button" download>Download MIDI</a>
         </section>
     </body>
 </html>
