--- a/more.html
+++ b/more.html
@@ -4,15 +4,19 @@
         <title></title>
         <style>
             img{
-                rotate: 90deg;
-                margin-right: 30px;
-                height: 300px;
+                margin-bottom: 30px;
+                height: 600px;
+            }
+            #imgs{
+                margin-left: 280px;
             }
         </style>
     </head>
     <body>
-        <img src="1.jpeg" alt=""><br>
-        <img src="2.jpeg" alt=""><br>
-        <img src="3.jpeg" alt="">
+        <section id="imgs">
+            <img src="1st.jpeg" alt=""><br>
+            <img src="2nd.jpeg" alt=""><br>
+            <img src="3rd.jpeg" alt="">
+        </section>
     </body>
 </html>
