--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
             <h3>MIDI File</h3>
             <a href="/song/tutorial.mid" class="button" download>Download MIDI</a>
         </section>
+        <scetion id="more">
+            <a href="more" class="button">MOre to</a>
+        </scetion>
     </body>
 </html>
